# Veska

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_error_recovery.py  test_memory.py  test_sandbox.py  test_structured.py  test_task_planner.py  test_web_helpers.py
veska/: __init__.py
veska/cache/: __init__.py  file_cache.py  memory_cache.py  store.py
veska/core/: agent.py  context_manager.py  env.py  events.py  format.py  helpers.py  mcp_connector.py  memory.py  message_bus.py  orchestrator.py  prompt_manager.py  structured.py  task_planner.py  thinking.py
veska/logging/: logger.py
veska/media/: __init__.py  processor.py  types.py
veska/memory/: __init__.py  chroma_store.py  file_store.py  migrate.py  pgvector_store.py  sqlite_store.py  store.py
veska/providers/: base.py  claude_provider.py  openai_provider.py
veska/recovery/: error_recovery.py  recovery.py
veska/security/: code_scanner.py  command_guard.py  sandbox.py
veska/sessions/: __init__.py  file_store.py  sqlite_store.py  store.py
veska/tools/: base.py  bing_search.py  code_runner.py  decorator.py  delegation.py  file_manager.py  google_search.py  human.py  permissions.py  project_tools.py  registry.py  web_helpers.py  web_search.py
veska/tracking/: cost_tracker.py
